# aesara-theano-fallback

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/aesara_theano_fallback/: __init__.py  compat.py  graph.py  tensor.py
tests/: test_imports.py
